# KernelModules

./: .gitignore  CMakeLists.txt  README.md  gtest_setup.md  proto.md  setup.md
common/: ko_makefile_template.mk
kernel/: Makefile
kernel/src/: common.h  core.c  core_module.c  core_module.h  simple_kernel_module.c
makefiles/: build_makefile.mk
plugin_manager/: Makefile
plugin_manager/src/: communication.h  core_module.c
plugins/: Makefile  dummy_plugin.c
plugins/dummy_plugin/: Makefile  dummy_plugin.c
plugins/plugin2/: Makefile  dummy_plugin2.c
scripts/: build.sh
src/: simple_kernel_module.cpp
src/k/: simple_kernel_module.c
tests/: test_main.cpp
usermode/src/: main.cpp
